--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.1.0",
+    "@types/nodemailer": "^6.4.15",
     "prisma": "^5.17.0",
     "tsx": "^4.16.5",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "fastify": "^4.28.1"
+    "@prisma/client": "^5.17.0",
+    "dayjs": "^1.11.12",
+    "fastify": "^4.28.1",
+    "fastify-type-provider-zod": "^2.0.0",
+    "nodemailer": "^6.9.14",
+    "zod": "^3.23.8"
   }
 }
